PROJECT ICONS ARE THE CORRECT SIZE ON MOBILE VIEW

--- a/src/components/RootLandingPage/TheMiddle/Projects/projects.css
+++ b/src/components/RootLandingPage/TheMiddle/Projects/projects.css
@@ -35,7 +35,7 @@
 }
 @media(max-width:770px){
     .projectImages{
-        height:100px;
-        width:100px;
+        height:50px;
+        width:50px;
     }
 }
